Revert "Phone number in the footer was hidden by a poorly written style, correcting that"
This reverts commit 58f4778e5a9f62941bacc15555196b561b2d6bab.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -33,7 +33,7 @@ header {
         }
     }
 }
-.site-title {
+.site-branding {
     margin-right: auto;
     padding: 12px;
     float: left;
